--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
-[build]
-  command = "npm run build"
-  publish = "build"
+[[build]]
+base="client"
+command="npm run build:prod"
+publsih="dist/browser"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[redirects]
+from="/*"
+to="/index.html"
+status=200
